--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1289,12 +1289,12 @@ body {
 }
 .cid-qIXW4oEIxZ .navbar {
   padding: .5rem 0;
-  background: #fdfdfd;
+  background: #fffbfb;
   transition: none;
   min-height: 77px;
 }
 .cid-qIXW4oEIxZ .navbar-dropdown.bg-color.transparent.opened {
-  background: #fdfdfd;
+  background: #fffbfb;
 }
 .cid-qIXW4oEIxZ a {
   font-style: normal;
@@ -1378,7 +1378,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qIXW4oEIxZ .dropdown .dropdown-menu {
-  background: #fdfdfd;
+  background: #fffbfb;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1901,12 +1901,12 @@ body {
 }
 .cid-qIZ3gU7qyT .navbar {
   padding: .5rem 0;
-  background: #fdfdfd;
+  background: #fffbfb;
   transition: none;
   min-height: 77px;
 }
 .cid-qIZ3gU7qyT .navbar-dropdown.bg-color.transparent.opened {
-  background: #fdfdfd;
+  background: #fffbfb;
 }
 .cid-qIZ3gU7qyT a {
   font-style: normal;
@@ -1990,7 +1990,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qIZ3gU7qyT .dropdown .dropdown-menu {
-  background: #fdfdfd;
+  background: #fffbfb;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2559,12 +2559,12 @@ body {
 }
 .cid-qJxFmkd3Rw .navbar {
   padding: .5rem 0;
-  background: #fdfdfd;
+  background: #fffbfb;
   transition: none;
   min-height: 77px;
 }
 .cid-qJxFmkd3Rw .navbar-dropdown.bg-color.transparent.opened {
-  background: #fdfdfd;
+  background: #fffbfb;
 }
 .cid-qJxFmkd3Rw a {
   font-style: normal;
@@ -2648,7 +2648,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qJxFmkd3Rw .dropdown .dropdown-menu {
-  background: #fdfdfd;
+  background: #fffbfb;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3102,12 +3102,12 @@ body {
 }
 .cid-qJOVDX5ime .navbar {
   padding: .5rem 0;
-  background: #fdfdfd;
+  background: #fffbfb;
   transition: none;
   min-height: 77px;
 }
 .cid-qJOVDX5ime .navbar-dropdown.bg-color.transparent.opened {
-  background: #fdfdfd;
+  background: #fffbfb;
 }
 .cid-qJOVDX5ime a {
   font-style: normal;
@@ -3191,7 +3191,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qJOVDX5ime .dropdown .dropdown-menu {
-  background: #fdfdfd;
+  background: #fffbfb;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -3630,12 +3630,12 @@ body {
 }
 .cid-qIXW4oEIxZ .navbar {
   padding: .5rem 0;
-  background: #fdfdfd;
+  background: #fffbfb;
   transition: none;
   min-height: 77px;
 }
 .cid-qIXW4oEIxZ .navbar-dropdown.bg-color.transparent.opened {
-  background: #fdfdfd;
+  background: #fffbfb;
 }
 .cid-qIXW4oEIxZ a {
   font-style: normal;
@@ -3719,7 +3719,7 @@ body {
   padding-bottom: 0;
 }
 .cid-qIXW4oEIxZ .dropdown .dropdown-menu {
-  background: #fdfdfd;
+  background: #fffbfb;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -4144,15 +4144,6 @@ body {
 }
 .cid-qK1gYmXsF9 LABEL {
   color: #ffffff;
-}
-.cid-qJCKXiP6Yz {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-color: #fdfdfd;
-}
-.cid-qJCKXiP6Yz .mbr-text,
-.cid-qJCKXiP6Yz blockquote {
-  color: #767676;
 }
 .cid-qJCKXmhoq6 .navbar {
   padding: .5rem 0;
@@ -4609,5 +4600,513 @@ body {
   color: #232323;
 }
 .cid-qJCKXpRXpF foot-menu-item {
+  color: #000000;
+}
+.cid-qKd7WUP9vW {
+  padding-top: 90px;
+  padding-bottom: 45px;
+  background: linear-gradient(45deg, #149dcc, #40c93f);
+}
+.cid-qKd7WUP9vW .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-qKd7WWJUdg {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #fdfdfd;
+}
+.cid-qKd7WWJUdg .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qKd7WWJUdg .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-qKd7WWJUdg H2 {
+  text-align: center;
+}
+.cid-qKd84MSe1f {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/giphy.gif");
+}
+.cid-qKd84MSe1f .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qKd84MSe1f .mbr-figure img {
+  height: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 991px) {
+  .cid-qKd84MSe1f .mbr-figure img {
+    width: 100% !important;
+  }
+}
+.cid-qKd7WZg4wq {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #fdfdfd;
+}
+.cid-qKd7WZg4wq .mbr-text,
+.cid-qKd7WZg4wq blockquote {
+  color: #767676;
+}
+.cid-qKd7X234X5 .navbar {
+  padding: .5rem 0;
+  background: #fdfdfd;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qKd7X234X5 .navbar-dropdown.bg-color.transparent.opened {
+  background: #fdfdfd;
+}
+.cid-qKd7X234X5 a {
+  font-style: normal;
+}
+.cid-qKd7X234X5 .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qKd7X234X5 .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qKd7X234X5 .nav-item:focus,
+.cid-qKd7X234X5 .nav-link:focus {
+  outline: none;
+}
+.cid-qKd7X234X5 .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qKd7X234X5 .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qKd7X234X5 .menu-logo {
+  margin-right: auto;
+}
+.cid-qKd7X234X5 .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qKd7X234X5 .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qKd7X234X5 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qKd7X234X5 .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qKd7X234X5 .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qKd7X234X5 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qKd7X234X5 .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qKd7X234X5 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qKd7X234X5 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qKd7X234X5 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qKd7X234X5 .dropdown .dropdown-menu {
+  background: #fdfdfd;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qKd7X234X5 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qKd7X234X5 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qKd7X234X5 .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qKd7X234X5 .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qKd7X234X5 .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qKd7X234X5 .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qKd7X234X5 .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qKd7X234X5 .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qKd7X234X5 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qKd7X234X5 .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qKd7X234X5 .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qKd7X234X5 button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qKd7X234X5 button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qKd7X234X5 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qKd7X234X5 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qKd7X234X5 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qKd7X234X5 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qKd7X234X5 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qKd7X234X5 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qKd7X234X5 nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qKd7X234X5 nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qKd7X234X5 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qKd7X234X5 .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qKd7X234X5 .collapsed .btn {
+  display: flex;
+}
+.cid-qKd7X234X5 .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qKd7X234X5 .collapsed .navbar-collapse.collapsing,
+.cid-qKd7X234X5 .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qKd7X234X5 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qKd7X234X5 .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qKd7X234X5 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qKd7X234X5 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qKd7X234X5 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qKd7X234X5 .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qKd7X234X5 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qKd7X234X5 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qKd7X234X5 .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qKd7X234X5 .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qKd7X234X5 .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qKd7X234X5 .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qKd7X234X5 .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qKd7X234X5 .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qKd7X234X5 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qKd7X234X5 .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qKd7X234X5 img {
+    height: 3.8rem !important;
+  }
+  .cid-qKd7X234X5 .btn {
+    display: flex;
+  }
+  .cid-qKd7X234X5 button.navbar-toggler {
+    display: block;
+  }
+  .cid-qKd7X234X5 .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qKd7X234X5 .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qKd7X234X5 .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qKd7X234X5 .navbar-collapse.collapsing,
+  .cid-qKd7X234X5 .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qKd7X234X5 .navbar-collapse.collapsing .navbar-nav,
+  .cid-qKd7X234X5 .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qKd7X234X5 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qKd7X234X5 .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qKd7X234X5 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qKd7X234X5 .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qKd7X234X5 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qKd7X234X5 .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qKd7X234X5 .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qKd7X234X5 .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qKd7X234X5 .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qKd7X234X5 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qKd7X234X5 .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qKd7X234X5 .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qKd7X234X5 .nav-link:hover,
+.cid-qKd7X234X5 .dropdown-item:hover {
+  color: #232323 !important;
+}
+.cid-qKd7X2ZkQM {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #fdfdfd;
+}
+.cid-qKd7X2ZkQM .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qKd7X2ZkQM .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qKd7X2ZkQM .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qKd7X2ZkQM .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qKd7X2ZkQM .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qKd7X2ZkQM .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qKd7X2ZkQM .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qKd7X2ZkQM .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qKd7X2ZkQM .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qKd7X2ZkQM .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qKd7X2ZkQM .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qKd7X2ZkQM .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qKd7X2ZkQM .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-qKd7X2ZkQM .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-qKd7X2ZkQM .media-container-row .mbr-text {
+  color: #232323;
+}
+.cid-qKd7X2ZkQM foot-menu-item {
   color: #000000;
 }
