--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6127,135 +6127,34 @@ body {
   text-align: center;
   color: #f9f9f9;
 }
-.cid-qQU7WSwbf6 {
+.cid-qQXQu11bKL {
   padding-top: 30px;
+  padding-bottom: 15px;
+  background-color: #12202a;
+}
+.cid-qQXQu11bKL H2 {
+  text-align: left;
+}
+.cid-qQXFOKQSFc {
+  padding-top: 0px;
   padding-bottom: 0px;
   background-color: #12202a;
 }
-.cid-qQU7WSwbf6 .nav-tabs {
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  border-bottom: none;
-}
-.cid-qQU7WSwbf6 .nav-tabs .nav-link {
-  box-sizing: border-box;
+.cid-qQXFOKQSFc .mbr-text,
+.cid-qQXFOKQSFc blockquote {
   color: #767676;
-  font-style: normal;
-  font-weight: 500;
-  border-radius: 3px;
-  border: 1px solid #767676;
-  padding: 1rem 3rem;
-  margin: 0.4rem .8rem !important;
-  transition: all .3s;
 }
-.cid-qQU7WSwbf6 .nav-tabs .nav-link:hover {
-  background-color: #149dcc;
-}
-.cid-qQU7WSwbf6 .nav-tabs .nav-link:focus {
-  box-shadow: none;
-  background-color: #149dcc;
-}
-.cid-qQU7WSwbf6 .nav-tabs .nav-link.active {
-  font-weight: 500;
+.cid-qQXFOKQSFc .mbr-text P {
+  text-align: left;
   color: #ffffff;
-  font-style: normal;
-  border: none;
-  background: #149dcc;
 }
-.cid-qQU7WSwbf6 .nav-tabs .nav-link.active:hover {
-  border: none;
-}
-.cid-qQU7WSwbf6 .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-qQU7WSwbf6 p {
-  color: #767676;
-}
-.cid-qQU7WSwbf6 .mbr-figure {
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-  -webkit-align-self: flex-start;
-  align-self: flex-start;
-  padding-right: 4rem;
-}
-.cid-qQU7WSwbf6 .mbr-text {
-  word-break: break-word;
-}
-@media (max-width: 991px) {
-  .cid-qQU7WSwbf6 .mbr-figure {
-    padding-right: 0;
-    padding-left: 0;
-    padding-bottom: 2rem;
-  }
-}
-.cid-qQOCdqKg5B {
-  padding-top: 135px;
-  padding-bottom: 135px;
+.cid-qQXUTcNzCX {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #12202a;
 }
-.cid-qQTKUzLY72 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #12202a;
-}
-.cid-qQTKUzLY72 .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-qQTKUzLY72 .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qQTKUzLY72 .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qQTKUzLY72 .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qQTKUzLY72 .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #679f43;
-  background: linear-gradient(to left, #679f43, #35709a) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-}
-.cid-qQTKUzLY72 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qQTKUzLY72 .mbr-gallery-item > div:hover:before {
-  opacity: 0.5 !important;
-}
-.cid-qQTKUzLY72 .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-qQTKUzLY72 .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #679f43 !important;
-  background: linear-gradient(to left, #679f43, #35709a) !important;
-  opacity: 0.5;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
+.cid-qQXUTcNzCX H2 {
+  text-align: left;
 }
 .cid-qQTLQdCzp4 .google-map {
   height: 25rem;
@@ -6313,96 +6212,6 @@ body {
 }
 .cid-qQTLRAVuCp .google-map[data-state="loading"] [data-state-details] {
   display: none;
-}
-.cid-qQTUIFKh4o {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #f9f9f9;
-}
-.cid-qQTUIFKh4o .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-qQTUIFKh4o .media-container-row {
-  word-wrap: break-word;
-  word-break: break-word;
-  align-items: stretch;
-  -webkit-align-items: stretch;
-}
-.cid-qQTUIFKh4o .card_cont {
-  -o-transition: all .5s;
-  -ms-transition: all .5s;
-  -moz-transition: all .5s;
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  text-align: center;
-  background-color: #eee;
-}
-.cid-qQTUIFKh4o .card-front {
-  z-index: 2;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.cid-qQTUIFKh4o .card-front img {
-  min-height: 100%;
-  min-width: 100%;
-  width: auto;
-  max-width: 600px;
-}
-.cid-qQTUIFKh4o .card_back {
-  width: 100%;
-  height: 100%;
-  padding: 30px 30px;
-  color: #ffffff;
-  background-color: #55b4d4;
-  z-index: 1;
-  margin: 0;
-  text-align: center;
-  overflow: hidden;
-  -o-transform: rotateX(-180deg);
-  -ms-transform: rotateX(-180deg);
-  -moz-transform: rotateX(-180deg);
-  -webkit-transform: rotateX(-180deg);
-  transform: rotateX(-180deg);
-}
-.cid-qQTUIFKh4o .card {
-  min-height: 300px;
-}
-.cid-qQTUIFKh4o .card:hover .card-front {
-  z-index: 1;
-  -o-transform: rotateX(180deg);
-  -ms-transform: rotateX(180deg);
-  -moz-transform: rotateX(180deg);
-  -webkit-transform: rotateX(180deg);
-  transform: rotateX(180deg);
-}
-.cid-qQTUIFKh4o .card:hover .card_back {
-  z-index: 2;
-  -o-transform: rotateX(0deg);
-  -ms-transform: rotateX(0deg);
-  -moz-transform: rotateX(0deg);
-  -webkit-transform: rotateX(0deg);
-  transform: rotateX(0deg);
-}
-.cid-qQTUIFKh4o .builderCard .card_back {
-  border-bottom-left-radius: 100px;
-}
-.cid-qQTUIFKh4o .builderCard .card_cont {
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidd;
-  -moz-backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  backface-visibility: visible;
 }
 .cid-qIYsnRaToN {
   padding-top: 120px;
@@ -6479,16 +6288,4 @@ body {
 }
 .cid-qIYsnRaToN foot-menu-item {
   color: #000000;
-}
-.cid-qQXFOKQSFc {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #12202a;
-}
-.cid-qQXFOKQSFc .mbr-text,
-.cid-qQXFOKQSFc blockquote {
-  color: #767676;
-}
-.cid-qQXFOKQSFc .mbr-text P {
-  text-align: left;
 }
