--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -42,17 +42,17 @@ body {
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 1.6rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.92rem;
+  font-size: 1.6rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -76,9 +76,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.8rem;
+    font-size: calc( 1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -640,13 +640,13 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Rubik', sans-serif;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.92rem;
+  font-size: 1.6rem;
 }
 .form-control,
 .form-control:focus {
@@ -6165,113 +6165,483 @@ body {
 .cid-qIYsnRaToN foot-menu-item {
   color: #000000;
 }
-.cid-qQUdc6JmhV {
-  padding-top: 30px;
-  padding-bottom: 30px;
+.cid-qRCQgmpFul {
   background-color: #12202a;
 }
-.cid-qQUdc6JmhV .card-box {
-  padding: 0 2rem;
+@media (min-width: 992px) {
+  .cid-qRCQgmpFul .mbr-figure {
+    padding-right: 4rem;
+  }
 }
-.cid-qQUdc6JmhV .mbr-section-btn {
-  padding-top: 1rem;
+@media (max-width: 991px) {
+  .cid-qRCQgmpFul .mbr-figure {
+    padding-bottom: 3rem;
+  }
 }
-.cid-qQUdc6JmhV .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
+@media (max-width: 767px) {
+  .cid-qRCQgmpFul .mbr-text {
+    text-align: center;
+  }
 }
-.cid-qQUdc6JmhV h4 {
-  font-weight: 500;
-  margin-bottom: 0;
+.cid-qRCQgmpFul H1 {
   text-align: left;
-  padding-top: 2rem;
 }
-.cid-qQUdc6JmhV p {
-  margin-bottom: 0;
+.cid-qRCPEH2CQA .navbar {
+  padding: .5rem 0;
+  background: #12202a;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qRCPEH2CQA .navbar-dropdown.bg-color.transparent.opened {
+  background: #12202a;
+}
+.cid-qRCPEH2CQA a {
+  font-style: normal;
+}
+.cid-qRCPEH2CQA .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qRCPEH2CQA .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qRCPEH2CQA .nav-item:focus,
+.cid-qRCPEH2CQA .nav-link:focus {
+  outline: none;
+}
+.cid-qRCPEH2CQA .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qRCPEH2CQA .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qRCPEH2CQA .menu-logo {
+  margin-right: auto;
+}
+.cid-qRCPEH2CQA .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qRCPEH2CQA .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qRCPEH2CQA .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qRCPEH2CQA .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qRCPEH2CQA .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qRCPEH2CQA .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qRCPEH2CQA .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qRCPEH2CQA .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qRCPEH2CQA .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qRCPEH2CQA .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qRCPEH2CQA .dropdown .dropdown-menu {
+  background: #12202a;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
   text-align: left;
-  padding-top: 1.5rem;
-  padding-top: 2rem;
 }
-.cid-qQUdc6JmhV .mbr-text {
-  color: #232323;
+.cid-qRCPEH2CQA .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qRCPEH2CQA .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qRCPEH2CQA .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qRCPEH2CQA .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qRCPEH2CQA .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qRCPEH2CQA .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qRCPEH2CQA .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qRCPEH2CQA .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qRCPEH2CQA .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qRCPEH2CQA .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qRCPEH2CQA .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qRCPEH2CQA button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qRCPEH2CQA button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qRCPEH2CQA button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #12202a;
+}
+.cid-qRCPEH2CQA button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qRCPEH2CQA button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qRCPEH2CQA button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qRCPEH2CQA button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qRCPEH2CQA nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qRCPEH2CQA nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qRCPEH2CQA nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qRCPEH2CQA nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qRCPEH2CQA .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qRCPEH2CQA .collapsed .btn {
+  display: flex;
+}
+.cid-qRCPEH2CQA .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.collapsing,
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
   text-align: center;
 }
-.cid-qQUdc6JmhV .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
 }
-.cid-qQUdc6JmhV .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
 }
-.cid-qQU7CR99gW {
-  padding-top: 90px;
-  padding-bottom: 135px;
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qRCPEH2CQA .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qRCPEH2CQA .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qRCPEH2CQA .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qRCPEH2CQA .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qRCPEH2CQA .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qRCPEH2CQA .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qRCPEH2CQA .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qRCPEH2CQA .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qRCPEH2CQA .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qRCPEH2CQA img {
+    height: 3.8rem !important;
+  }
+  .cid-qRCPEH2CQA .btn {
+    display: flex;
+  }
+  .cid-qRCPEH2CQA button.navbar-toggler {
+    display: block;
+  }
+  .cid-qRCPEH2CQA .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qRCPEH2CQA .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qRCPEH2CQA .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qRCPEH2CQA .navbar-collapse.collapsing,
+  .cid-qRCPEH2CQA .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qRCPEH2CQA .navbar-collapse.collapsing .navbar-nav,
+  .cid-qRCPEH2CQA .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qRCPEH2CQA .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qRCPEH2CQA .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qRCPEH2CQA .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qRCPEH2CQA .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qRCPEH2CQA .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qRCPEH2CQA .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qRCPEH2CQA .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qRCPEH2CQA .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qRCPEH2CQA .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qRCPEH2CQA .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qRCPEH2CQA .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qRCPEH2CQA .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qRCPEH2CQA .nav-link:hover,
+.cid-qRCPEH2CQA .dropdown-item:hover {
+  color: #232323 !important;
+}
+.cid-qRCV3PYqRJ {
+  padding-top: 60px;
+  padding-bottom: 0px;
   background-color: #12202a;
 }
-.cid-qQU7CR99gW h4 {
+.cid-qRCUVHoL86 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #12202a;
+  position: relative;
+}
+.cid-qRCUVHoL86 .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-qRCUVHoL86 .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-qRCUVHoL86 .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
   font-weight: 500;
-  color: #ffffff;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
 }
-.cid-qQU7CR99gW p {
-  color: #ffffff;
+.cid-qRCUVHoL86 .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
 }
-.cid-qQU7CR99gW .card {
-  margin-bottom: 2rem;
-}
-.cid-qQU7CR99gW .card-img {
-  border-radius: 0;
-  padding: 2rem 2rem 0 2rem;
-  background-color: #f9f9f9;
-}
-.cid-qQU7CR99gW .card-img span {
-  font-size: 100px;
-  color: #ffffff;
-}
-.cid-qQU7CR99gW .card-box {
-  padding-bottom: 2rem;
-  background-color: #f9f9f9;
-  background: linear-gradient(#f9f9f9, transparent);
-}
-.cid-qQU7CR99gW .card-box .card-title {
-  margin: 0;
-  padding: 2rem 2rem 0 2rem;
-}
-.cid-qQU7CR99gW .card-box .mbr-text {
-  margin-bottom: 0;
-  padding: 2rem 2rem 0 2rem;
-}
-.cid-qQU7CR99gW .card-box .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-qQU7CR99gW .card-box .mbr-section-btn a {
-  margin-top: 1rem;
+.cid-qRCUVHoL86 .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
   margin-bottom: 0;
 }
-.cid-qQU7CR99gW P {
-  color: #f9f9f9;
+.cid-qRCUVHoL86 .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
 }
-.cid-qQU7CR99gW .card-title,
-.cid-qQU7CR99gW .card-img {
+.cid-qRCUVHoL86 .card .panel-body {
   color: #767676;
 }
-.cid-qQTLRAVuCp {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-qRCUVHoL86 .panel-text P {
+  color: #ffffff;
+}
+.cid-qRCUVHoL86 H4 {
+  color: #ffffff;
+}
+.cid-qRCUVHoL86 H2 {
+  color: #ffffff;
+}
+.cid-qRCUVHoL86 .panel-text {
+  color: #ffffff;
+}
+.cid-qRCUVHoL86 P {
+  color: #ffffff;
+}
+.cid-qRCPELEAYy {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #12202a;
 }
-.cid-qQTLRAVuCp .google-map {
+.cid-qRCPELEAYy H2 {
+  text-align: left;
+}
+.cid-qRCPEMkTXg .google-map {
   height: 25rem;
   position: relative;
 }
-.cid-qQTLRAVuCp .google-map iframe {
+.cid-qRCPEMkTXg .google-map iframe {
   height: 100%;
   width: 100%;
 }
-.cid-qQTLRAVuCp .google-map [data-state-details] {
+.cid-qRCPEMkTXg .google-map [data-state-details] {
   color: #6b6763;
   font-family: Montserrat;
   height: 1.5em;
@@ -6283,9 +6653,85 @@ body {
   top: 50%;
   width: 100%;
 }
-.cid-qQTLRAVuCp .google-map[data-state] {
+.cid-qRCPEMkTXg .google-map[data-state] {
   background: #e9e5dc;
 }
-.cid-qQTLRAVuCp .google-map[data-state="loading"] [data-state-details] {
+.cid-qRCPEMkTXg .google-map[data-state="loading"] [data-state-details] {
   display: none;
+}
+.cid-qRCPEVGWNV {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #12202a;
+}
+.cid-qRCPEVGWNV .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qRCPEVGWNV .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qRCPEVGWNV .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qRCPEVGWNV .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qRCPEVGWNV .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qRCPEVGWNV .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qRCPEVGWNV .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qRCPEVGWNV .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qRCPEVGWNV .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qRCPEVGWNV .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qRCPEVGWNV .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qRCPEVGWNV .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qRCPEVGWNV .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-qRCPEVGWNV .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-qRCPEVGWNV .media-container-row .mbr-text {
+  color: #232323;
+}
+.cid-qRCPEVGWNV foot-menu-item {
+  color: #000000;
 }
